--- a/src/components/MainSection.scss
+++ b/src/components/MainSection.scss
@@ -1,3 +1,7 @@
 .main_section {
     position: relative;
+    .view_section {
+        padding: 30px 40px 30px 80px;
+        background-color: rgb(250, 164, 4);
+    }
 }
