--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -1,3 +1,5 @@
+@import "../utilities/variables";
+
 .main {
     padding: 1rem;
     display: flex;
@@ -7,7 +9,7 @@
         display: flex;
         align-items: center;
         .main_logo {
-            color: red;
+            color: $logo_color;
             sup {
                 font-size: 1rem;
             }
