Initial browser routing

--- a/src/components/Header.scss
+++ b/src/components/Header.scss
@@ -8,15 +8,17 @@
     .main_left {
         display: flex;
         align-items: center;
-        .main_logo {
-            color: $logo_color;
-            sup {
-                font-size: 1rem;
+        .logo_link {
+            text-decoration: none;
+            .main_logo {
+                color: $logo_color;
+                sup {
+                    font-size: 1rem;
+                }
             }
         }
         .main_title {
             margin-left: 2rem;
         } 
-    }
-    
+    } 
 }
