--- a/src/components/MenuItem.scss
+++ b/src/components/MenuItem.scss
@@ -1,14 +1,18 @@
 @import "../utilities/variables";
-.menu_item {
-    padding: .8rem;
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    cursor: pointer;
-    &:hover {
-        background-color: $hover_color;
-    }
-    .menu_title {
-        color: rgb(255, 255, 255)
+.item_link {
+    text-decoration: none;
+    .menu_item {
+        padding: .8rem;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        cursor: pointer;
+        &:hover {
+            background-color: $hover_color;
+        }
+        .menu_title {
+            color: rgb(255, 255, 255);
+            text-decoration: none;
+        }
     }
 }
