Initial employee list design

--- a/src/views/Employees.scss
+++ b/src/views/Employees.scss
@@ -22,4 +22,30 @@
            }
        }
    }
+   .employees_list {
+       padding: 1rem 1rem 1rem;
+       .list_table {
+           padding-top: 1rem;
+           max-height: 50vh;
+           overflow-y: scroll;
+        table {
+            border-collapse: collapse;
+            width: 100%;
+            td, th {
+                border: 1px solid #dddddd;
+                text-align: left;
+                padding: 8px;
+              }
+              td {
+                  padding: 1rem;
+              }
+              tr:hover {
+                  background-color: #d2f1ff;
+              }
+              tr:nth-child(even) {
+                background-color: #d2f1ff;
+              }
+          }
+       }
+   }
 }
