--- a/src/utilities/_variables.scss
+++ b/src/utilities/_variables.scss
@@ -1,3 +1,5 @@
 $main_color: rgb(8, 4, 245);
 $hover_color: rgb(66, 83, 235);
-$logo_color: rgb(255, 0, 0)
+$logo_color: rgb(255, 0, 0);
+$table_rows: rgb(180, 226, 240);
+$divider_color: rgb(122, 122, 122);
