--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -1,7 +1,7 @@
 @import "../utilities/variables";
 .sidebar_container {
     width: 300px;
-    height: 100vh;
+    height: 100%;
     background-color: $main_color;
     border-top: 1px solid white;
     position: absolute;
