Calendar initial logic

--- a/src/components/SideBar.scss
+++ b/src/components/SideBar.scss
@@ -5,6 +5,6 @@
     background-color: $main_color;
     border-top: 1px solid white;
     position: absolute;
-    transition: .3s ease;
+    transition: 0.3s ease;
     left: -240px;
 }
