--- a/src/components/MainSection.scss
+++ b/src/components/MainSection.scss
@@ -2,6 +2,6 @@
     position: relative;
     .view_section {
         padding: 30px 40px 30px 80px;
-        min-height: calc(100vh - 54px - 82px)
+        min-height: calc(100vh - 54px - 82px);
     }
 }
