--- a/src/components/MenuItem.scss
+++ b/src/components/MenuItem.scss
@@ -2,7 +2,7 @@
 .item_link {
     text-decoration: none;
     .menu_item {
-        padding: .8rem;
+        padding: 0.8rem;
         display: flex;
         align-items: center;
         justify-content: space-between;
