--- a/src/components/Table.scss
+++ b/src/components/Table.scss
@@ -1,8 +1,9 @@
 @import "../utilities/variables";
-table ,tr td{
+table,
+tr td {
     border-collapse: collapse;
     width: 100%;
-    padding: .8rem;
+    padding: 0.8rem;
 }
 thead {
     color: white;
@@ -13,10 +14,10 @@ thead {
         }
         .icon {
             display: inline-block;
-            padding-left: 8px; 
+            padding-left: 8px;
             img {
                 vertical-align: middle;
-            }   
+            }
         }
     }
     .activeTab {
@@ -24,14 +25,15 @@ thead {
     }
 }
 tbody {
-    display:block;
-    min-height:40vh;
-    overflow:auto;
+    display: block;
+    min-height: 40vh;
+    overflow: auto;
 }
-thead, tbody tr {
-    display:table;
-    width:100%;
-    table-layout:fixed;
+thead,
+tbody tr {
+    display: table;
+    width: 100%;
+    table-layout: fixed;
 }
 tr:nth-child(even) {
     background-color: $table_rows;
