--- a/src/components/TopBar.scss
+++ b/src/components/TopBar.scss
@@ -2,18 +2,20 @@
 .topbar_container {
     background-color: $main_color;
     color: white;
-    padding: .8rem;
+    padding: 0.8rem;
     display: flex;
     align-items: center;
     .burger_menu {
         .burger {
             cursor: pointer;
-            .bar1, .bar2, .bar3 {
+            .bar1,
+            .bar2,
+            .bar3 {
                 width: 2.2rem;
-                height: .4rem;
+                height: 0.4rem;
                 background-color: white;
                 border-radius: 10px;
-                margin-bottom: .2rem;
+                margin-bottom: 0.2rem;
             }
         }
     }
@@ -26,20 +28,22 @@
                 color: white;
                 text-decoration: none;
             }
-            .breadcrumb-item, .breadcrumb-item-text {
+            .breadcrumb-item,
+            .breadcrumb-item-text {
                 cursor: pointer;
                 &:hover {
                     text-decoration: underline;
                 }
             }
-            .breadcrumb-item, .breadcrumb-item-secondary {
-                margin-left: .8rem;
+            .breadcrumb-item,
+            .breadcrumb-item-secondary {
+                margin-left: 0.8rem;
             }
             .breadcrumb-item-secondary {
-              display: flex;
-              .breadcrumb-arrow {
-                  margin-right: .8rem;
-              }
+                display: flex;
+                .breadcrumb-arrow {
+                    margin-right: 0.8rem;
+                }
             }
         }
     }
