--- a/src/views/Calendar.scss
+++ b/src/views/Calendar.scss
@@ -9,6 +9,7 @@ $initial_day: 1;
             border-radius: 10px;
             margin-top: 1rem;
             outline: 1px solid $main_color;
+            overflow: hidden;
             .calendar_month {
                 padding: 1rem;
                 display: flex;
