--- a/src/views/Calendar.scss
+++ b/src/views/Calendar.scss
@@ -45,6 +45,8 @@ $initial_day: 1;
                 }
                 .days_numbers {
                     display: grid;
+                    position: relative;
+                    z-index: 0;
                     grid-template-columns: repeat(7, 1fr);
                     grid-template-rows: repeat(1, 1fr);
                     gap: 0px 0px;
@@ -56,10 +58,24 @@ $initial_day: 1;
                         ". . . . . . ."
                         ". . . . . . .";
                     .grid_item_number {
+                        position: relative;
+                        z-index: 1;
                         padding: 1rem;
                         text-align: center;
                         font-size: 2rem;
                         cursor: pointer;
+
+                        .context_menu {
+                            position: absolute;
+                            z-index: 2 !important;
+                            width: 200px;
+                            background-color: rgb(228, 15, 15);
+                            padding: 1rem;
+                            .context_menu_list {
+                                font-size: 1rem;
+                                list-style: none;
+                            }
+                        }
                         &:hover {
                             background-color: $hover_color;
                             color: white;
