--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,10 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Poppins:wght@400;500&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Lato:wght@400;900&family=Poppins:wght@400;500&display=swap");
 * {
   margin: 0;
   padding: 0;
   box-sizing: border-box;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato", sans-serif;
+}
+body {
+  overflow-x: hidden;
 }
