contex menu design work

--- a/src/views/Calendar.scss
+++ b/src/views/Calendar.scss
@@ -71,13 +71,22 @@ $initial_day: 1;
                             z-index: 2;
                             width: 200px;
                             background-color: $main_color;
-                            padding: 1rem;
+                            opacity: 0.97;
+                            -webkit-box-shadow: 10px 12px 16px -10px rgba(66, 68, 90, 1);
+                            -moz-box-shadow: 10px 12px 16px -10px rgba(66, 68, 90, 1);
+                            box-shadow: 10px 12px 16px -10px rgba(66, 68, 90, 1);
                             color: white;
                             .context_menu_list {
                                 font-size: 1rem;
                                 list-style: none;
                                 li {
-                                    margin: 0.5rem 0;
+                                    padding: 0.5rem;
+                                    &:hover {
+                                        background-color: $hover_color;
+                                    }
+                                    &:first-child {
+                                        background-color: rgb(0, 68, 255);
+                                    }
                                 }
                             }
                         }
