--- a/src/views/Calendar.scss
+++ b/src/views/Calendar.scss
@@ -48,7 +48,8 @@ $initial_day: 1;
           grid-template-columns: repeat(7, 1fr);
           grid-template-rows: repeat(1, 1fr);
           gap: 0px 0px;
-          .grid_item_number {
+          .grid_item_number,
+          .react-contextmenu-wrapper {
             position: relative;
             padding: 1rem;
             text-align: center;
@@ -59,6 +60,28 @@ $initial_day: 1;
               color: white;
             }
           }
+          .react-contextmenu {
+            z-index: 1;
+            opacity: 0.97;
+            -webkit-box-shadow: 10px 12px 16px -10px rgba(66, 68, 90, 1);
+            -moz-box-shadow: 10px 12px 16px -10px rgba(66, 68, 90, 1);
+            box-shadow: 10px 12px 16px -10px rgba(66, 68, 90, 1);
+            .react-contextmenu-item {
+              z-index: 2;
+              padding: 0.8rem 1.5rem;
+              background-color: $main_color;
+              color: white;
+              cursor: pointer;
+              &:hover {
+                background-color: $hover_color;
+              }
+              &:first-child {
+                background-color: rgb(1, 33, 120);
+                cursor: auto;
+              }
+            }
+          }
+
           @for $initial_day from 1 through 7 {
             .initial_day_#{$initial_day}:first-child {
               grid-column: $initial_day;
