Employee info tab added above calendar

--- a/src/views/Calendar.scss
+++ b/src/views/Calendar.scss
@@ -1,9 +1,13 @@
 @import "../utilities/variables";
 $initial_day: 1;
 .calendar_container {
-  .calendar_main {
+  .calendar_search {
     padding: 1rem;
     border-top: 2px solid $divider_color;
+    border-bottom: 2px solid $divider_color;
+  }
+  .calendar_main {
+    padding: 0 1rem 1rem;
     .calendar {
       width: 100%;
       border-radius: 10px;
