loader position fix - css

--- a/src/components/Loader.scss
+++ b/src/components/Loader.scss
@@ -9,7 +9,7 @@
   .loader_container {
     position: relative;
     transform: translateY(-100%);
-    top: 50%;
+    top: 50vh;
     .loader,
     .loader:before,
     .loader:after {
