Breadcrump nav for up to 2 items completed

--- a/src/components/TopBar.scss
+++ b/src/components/TopBar.scss
@@ -28,6 +28,11 @@
         color: white;
         text-decoration: none;
       }
+      .breadcrumb-item {
+        .breadcrumb-link {
+          text-decoration: none;
+        }
+      }
       .breadcrumb-item,
       .breadcrumb-item-text {
         cursor: pointer;
@@ -38,12 +43,8 @@
         }
       }
       .breadcrumb-item,
-      .breadcrumb-arrow,
-      .breadcrumb-item-secondary {
+      .breadcrumb-arrow {
         margin-left: 0.8rem;
-      }
-      .breadcrumb-item-secondary {
-        display: flex;
       }
     }
   }
