--- a/src/components/TimelineEvent.scss
+++ b/src/components/TimelineEvent.scss
@@ -1,7 +1,7 @@
 @import "../utilities/variables";
 .timeline_event {
   transform: translateX(-50%);
-  width: 25vw;
+  width: 20vw;
   height: 150px;
   margin-bottom: 1rem;
   .event_line {
@@ -28,6 +28,10 @@
       transform: translateX(calc(100% + 60px));
       text-align: left;
       padding-left: 1rem;
+      // width: fit-content;
+      .event_title {
+        margin-bottom: 1rem;
+      }
     }
   }
   .line_left {
@@ -39,6 +43,7 @@
       transform: translateX(calc(-100% - 60px));
       text-align: right;
       padding-right: 1rem;
+      padding-left: 0;
     }
   }
 }
