--- a/src/views/Timeline.scss
+++ b/src/views/Timeline.scss
@@ -1,5 +1,8 @@
 @import "../utilities/variables";
 .timeline_container {
+  .timeline_employee {
+    margin-top: 1rem;
+  }
   .timeline_section {
     .timeline_axis {
       position: relative;
@@ -8,6 +11,14 @@
       transform: translateX(-50%);
       width: 0;
       border-left: 3px solid $main_color;
+      .top_dot {
+        position: absolute;
+        width: 1rem;
+        height: 1rem;
+        border-radius: 50%;
+        transform: translate(-60%, -100%);
+        background-color: $main_color;
+      }
     }
   }
 }
